tests/paczka1/fuzzy1/17208341.err
Error in line 3: cxG A489 37,00
Error in line 4: cxG A489 HH,3
Error in line 5: K8d S711 51,1
Error in line 12: JNwD2OKxK A788 89,8
Error in line 10: cxG S711 19,0
Error in line 14: cstpznlF9Ai S711 40,0
Error in line 33: vMirdXO S711 160,6
